gcampus/core/static_src/styles/_sidebar.scss
/*!
 * Copyright (C) 2021-2022 desklab gUG (haftungsbeschränkt)
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

$sidebar-transition: .12s;

.gcampus-logo {
  font-weight: $font-weight-bold !important;
  text-decoration: none !important;;
  color: $white !important;;
  :first-child {
    color: $blue-200 !important;;
  }
  &.link-dark, &.text-dark {
    color: $gray-800 !important;;
    :first-child {
      color: $blue-600 !important;;
    }
  }
}

.sidebar {
  background-color: $white;
  max-height: 100%;
  padding-left: 0 !important;
  padding-right: 0 !important;
  border-bottom: solid $border-width $border-color;
  // Hide scroll bar until transition ends
  transition: $transition-collapse, overflow .35s;

  * {
    --#{$prefix}nav-link-color: #{$gray-800};
    --#{$prefix}nav-link-hover-color: #{$gray-900};
    --#{$prefix}nav-pills-link-active-color: #{$gray-100};
    --#{$prefix}btn-border-width: 0;
  }

  &.show {
    overflow: auto;
  }

  .sidebar-item-icon {
    margin-right: map-get($spacers, 2);
  }

  @include media-breakpoint-up(md) {
    display: flex !important; // Overwrite collapse's display: none
    position: fixed;
    flex-direction: column;
    justify-content: space-between;
    background-color: $primary;
    z-index: $zindex-offcanvas;
    border-bottom: none !important;
    top: 0;
    left: 0;
    bottom: 0;


    * {
      --#{$prefix}nav-link-color: #{$blue-100};
      --#{$prefix}nav-link-hover-color: #{$white};
      --#{$prefix}nav-pills-link-active-bg: #{$blue-700};
      --#{$prefix}nav-pills-link-active-color: #{$blue-100};
    }

    &.collapse {
      width: $sidebar-closed-width;
      transition: width $sidebar-transition ease-in;
      overflow-x: hidden;
      white-space: nowrap;


      .sidebar-item-title, .sidebar-title, .sidebar-item-hidden {
        transition: opacity $sidebar-transition ease-in;
        opacity: 0;
      }

      ~ main {
        transition: margin-left $sidebar-transition ease-in, width $sidebar-transition ease-in;
        width: calc(100% - #{$sidebar-closed-width});
        margin-left: $sidebar-closed-width !important;

        .navbar {
          transition: padding-left $sidebar-transition ease-in;
          padding-left: $sidebar-closed-width !important;
        }
      }

      &.show-sidebar {
        width: $sidebar-opened-width;

        .sidebar-item-title, .sidebar-title, .sidebar-item-hidden {
          opacity: 1;
        }

        ~ main {
          width: calc(100% - #{$sidebar-opened-width});
          margin-left: $sidebar-opened-width !important;

          .navbar {
            padding-left: $sidebar-opened-width !important;
          }
        }
      }
    }
  }
}

